<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="
            http://maven.apache.org/POM/4.0.0
            https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.3</version>
        <relativePath/>
    </parent>

    <groupId>ru.lbcalc</groupId>
    <artifactId>LB_Calc_Web</artifactId>
    <version>${revision}</version>

    <packaging>pom</packaging>

    <name>LB_Calc_Web</name>

    <properties>
        <revision>0.1.0-SNAPSHOT</revision>
        <java.version>17</java.version>
    </properties>

    <modules>
        <module>lb-calc-web</module>
        <module>notification-service</module>
    </modules>

</project>